Moved tests to tests folder

--- a/tests/tests.html
+++ b/tests/tests.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <title>Structures Test Page</title>
-    <script src="heap.js"></script>
+    <script src="../heap.js"></script>
     <script src="tests.js"></script>
   </head>
   <body>
