--- a/tests/teststruct.html
+++ b/tests/teststruct.html
@@ -1,10 +1,10 @@
 <html>
   <head>
     <title>Heap Structure Test</title>
-    <script src="heapstruct.js"></script>
+    <script src="../heapstruct.js"></script>
     <script src="teststruct.js"></script>
   </head>
   <body>
-    <h1>Heap Strcture Tests</h1>
+    <h1>Heap Structure Tests</h1>
   </body>
 </html>
